// Vitest Snapshot v1

exports[`Comment > Comment baseVue demo works fine 1`] = `
<t-comment
  author="评论作者名"
  avatar="https://tdesign.gtimg.com/site/avatar.jpg"
  content="这里是评论者写的评论内容。"
  datetime="今天16:38"
/>
`;

exports[`Comment > Comment listVue demo works fine 1`] = `
<t-list
  data-v-72dcb149=""
  split="true"
>
  <t-list-item
    data-v-72dcb149=""
  />
  <t-list-item
    data-v-72dcb149=""
  />
  <t-list-item
    data-v-72dcb149=""
  />
</t-list>
`;

exports[`Comment > Comment operationVue demo works fine 1`] = `
<t-comment
  author="评论作者名"
  avatar="https://tdesign.gtimg.com/site/avatar.jpg"
  content="这里是评论者写的评论内容。"
  data-v-70d43968=""
  datetime="今天16:38"
/>
`;

exports[`Comment > Comment quoteVue demo works fine 1`] = `
<t-comment
  author="评论作者名"
  avatar="https://tdesign.gtimg.com/site/avatar.jpg"
  content="这里是评论者写的评论内容。"
  data-v-4829af3e=""
  datetime="今天16:38"
/>
`;

exports[`Comment > Comment replyFormVue demo works fine 1`] = `
<t-comment
  avatar="https://tdesign.gtimg.com/site/avatar.jpg"
  data-v-02d347b2=""
/>
`;

exports[`Comment > Comment replyVue demo works fine 1`] = `
<t-comment
  author="评论作者名"
  avatar="https://tdesign.gtimg.com/site/avatar.jpg"
  content="这里是评论者写的评论内容。"
  data-v-1a7615cf=""
  datetime="今天16:38"
/>
`;
